SERVER-33377 do not disguise the reason for an index build's failure